--- a/Dance Dance Evolution/Main/Base.lproj/Main.storyboard
+++ b/Dance Dance Evolution/Main/Base.lproj/Main.storyboard
@@ -179,7 +179,7 @@
                                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="20"/>
                                                 <inset key="contentEdgeInsets" minX="10" minY="6" maxX="10" maxY="6"/>
                                                 <size key="titleShadowOffset" width="-1" height="-2"/>
-                                                <state key="normal" title="RESUME">
+                                                <state key="normal" title="resume">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <color key="titleShadowColor" red="0.18039215689999999" green="0.41960784309999999" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
