--- a/Dance Dance Evolution/Main/Base.lproj/Main.storyboard
+++ b/Dance Dance Evolution/Main/Base.lproj/Main.storyboard
@@ -145,7 +145,7 @@
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vVK-CO-vjU" userLabel="ButtonsCard">
                                 <rect key="frame" x="67.5" y="71" width="185" height="370"/>
                                 <subviews>
-                                    <stackView clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="jat-PI-cyH" userLabel="ButtonsStackView">
+                                    <stackView clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="jat-PI-cyH" userLabel="ButtonsStackView">
                                         <rect key="frame" x="0.0" y="50" width="185" height="270"/>
                                         <subviews>
                                             <button opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hct-66-Lgb" userLabel="RESUME" customClass="EdgedButton" customModule="Dance_Dance_Evolution" customModuleProvider="target">
@@ -795,49 +795,60 @@
                                 <rect key="frame" x="10" y="78" width="300" height="480"/>
                                 <color key="backgroundColor" white="1" alpha="0.95812821061643838" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="sequenceCell" rowHeight="78" id="01F-Lu-hkf" customClass="CustomSequenceCell" customModule="Dance_Dance_Evolution" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="300" height="78"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="sequenceCell" rowHeight="100" id="01F-Lu-hkf" customClass="CustomSequenceCell" customModule="Dance_Dance_Evolution" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="300" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="01F-Lu-hkf" id="Aor-Jp-ukZ">
-                                            <rect key="frame" x="0.0" y="0.0" width="300" height="77.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="99.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sequence Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uf4-jH-jVu" userLabel="NameLabel">
-                                                    <rect key="frame" x="10" y="10" width="280" height="29.5"/>
-                                                    <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="16"/>
+                                                    <rect key="frame" x="10" y="5" width="280" height="28"/>
+                                                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="16"/>
                                                     <color key="textColor" red="0.23529411759999999" green="0.74117647060000003" blue="0.31372549020000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(000)" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SxH-ci-QVi" userLabel="LengthLabel">
-                                                    <rect key="frame" x="245" y="49.5" width="45" height="18"/>
+                                                    <rect key="frame" x="245" y="73" width="45" height="16.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="45" id="gZW-dI-fEH"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="14"/>
+                                                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Letters..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aiV-qh-7Im" userLabel="LettersLabel">
-                                                    <rect key="frame" x="10" y="49.5" width="235" height="18"/>
-                                                    <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="14"/>
+                                                    <rect key="frame" x="10" y="73" width="235" height="16.5"/>
+                                                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="14"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0co-X2-7DR" customClass="DnaView" customModule="Dance_Dance_Evolution" customModuleProvider="target">
+                                                    <rect key="frame" x="10" y="33" width="280" height="35"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="35" id="y8i-7X-8et"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="uf4-jH-jVu" firstAttribute="leading" secondItem="Aor-Jp-ukZ" secondAttribute="leading" constant="10" id="5W5-Rw-SuK"/>
                                                 <constraint firstItem="SxH-ci-QVi" firstAttribute="bottom" secondItem="Aor-Jp-ukZ" secondAttribute="bottom" constant="-10" id="HG1-ft-aOb"/>
-                                                <constraint firstItem="uf4-jH-jVu" firstAttribute="top" secondItem="Aor-Jp-ukZ" secondAttribute="top" constant="10" id="Hzs-Og-bkl"/>
-                                                <constraint firstItem="aiV-qh-7Im" firstAttribute="top" secondItem="uf4-jH-jVu" secondAttribute="bottom" constant="10" id="JgN-rF-Kmv"/>
+                                                <constraint firstItem="uf4-jH-jVu" firstAttribute="top" secondItem="Aor-Jp-ukZ" secondAttribute="top" constant="5" id="Hzs-Og-bkl"/>
+                                                <constraint firstItem="0co-X2-7DR" firstAttribute="top" secondItem="uf4-jH-jVu" secondAttribute="bottom" id="JgN-rF-Kmv"/>
+                                                <constraint firstItem="0co-X2-7DR" firstAttribute="leading" secondItem="Aor-Jp-ukZ" secondAttribute="leading" constant="10" id="ZWT-K8-duB"/>
                                                 <constraint firstItem="SxH-ci-QVi" firstAttribute="trailing" secondItem="Aor-Jp-ukZ" secondAttribute="trailing" constant="-10" id="b1D-nG-AJ8"/>
-                                                <constraint firstItem="SxH-ci-QVi" firstAttribute="top" secondItem="uf4-jH-jVu" secondAttribute="bottom" constant="10" id="diG-Om-SZu"/>
+                                                <constraint firstItem="SxH-ci-QVi" firstAttribute="top" secondItem="0co-X2-7DR" secondAttribute="bottom" constant="5" id="diG-Om-SZu"/>
                                                 <constraint firstItem="aiV-qh-7Im" firstAttribute="bottom" secondItem="Aor-Jp-ukZ" secondAttribute="bottom" constant="-10" id="epn-pN-224"/>
                                                 <constraint firstItem="aiV-qh-7Im" firstAttribute="trailing" secondItem="SxH-ci-QVi" secondAttribute="leading" id="gQu-GY-AjZ"/>
                                                 <constraint firstItem="aiV-qh-7Im" firstAttribute="leading" secondItem="Aor-Jp-ukZ" secondAttribute="leading" constant="10" id="luZ-a8-Og2"/>
                                                 <constraint firstItem="uf4-jH-jVu" firstAttribute="trailing" secondItem="Aor-Jp-ukZ" secondAttribute="trailing" constant="-10" id="pwm-Iq-EN4"/>
+                                                <constraint firstItem="0co-X2-7DR" firstAttribute="bottom" secondItem="aiV-qh-7Im" secondAttribute="top" constant="-5" id="rJt-3Z-3mg"/>
+                                                <constraint firstAttribute="trailing" secondItem="0co-X2-7DR" secondAttribute="trailing" constant="10" id="yYh-TZ-Gtb"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="dnaView" destination="0co-X2-7DR" id="gLU-Ez-OJq"/>
                                             <outlet property="lengthLabel" destination="SxH-ci-QVi" id="8Z8-ie-P9M"/>
                                             <outlet property="lettersLabel" destination="aiV-qh-7Im" id="NHl-3w-8BA"/>
                                             <outlet property="nameLabel" destination="uf4-jH-jVu" id="kAJ-xY-hgW"/>
@@ -859,7 +870,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="20"/>
                                 <size key="titleShadowOffset" width="-1" height="-2"/>
-                                <state key="normal" title="↩">
+                                <state key="normal" title="⮐ ">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
